project-int-chart/templates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-int-app-deployment
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-int-app
  template:
    metadata:
      labels:
        app: project-int-app
    spec:
      containers:
      - name: python-app
        image: project-int:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
